--- a/templates/backend/khuyenmai/edit.html.twig
+++ b/templates/backend/khuyenmai/edit.html.twig
@@ -3,13 +3,13 @@
 
 {# Nội dung trong block title #}
 {% block title %}
-Thêm mới Khuyến mãi
+Sửa Loại sản phẩm
 {% endblock %}
 {# End Nội dung trong block title #}
 
 {# Nội dung trong block headline #}
 {% block headline %}
-Thêm mới Khuyến mãi
+Sửa Loại sản phẩm
 {% endblock %}
 {# End Nội dung trong block headline #}
 
