--- a/templates/backend/layouts/includes/sidebar.html.twig
+++ b/templates/backend/layouts/includes/sidebar.html.twig
@@ -2,12 +2,12 @@
     <div class="sidebar-sticky">
         <ul class="nav flex-column">
             <li class="nav-item">
-                <a class="nav-link active" href="/php/twig/backend/pages/dashboard.php">
+                <a class="nav-link active" href="/shoponline/backend/pages/dashboard.php">
                     <span data-feather="home"></span>
                     Bảng tin <span class="sr-only">(current)</span>
                 </a>
             </li>
-          
+
             <!-- Menu Loại sản phẩm -->
             <li class="nav-item">
                 <a href="#loaisanphamSubMenu" data-toggle="collapse" aria-expanded="false" class="nav-link dropdown-toggle">
@@ -15,13 +15,13 @@
                 </a>
                 <ul class="collapse" id="loaisanphamSubMenu">
                     <li class="nav-item">
-                        <a class="nav-link" href="/php/twig/backend/loaisanpham/index.php">
+                        <a class="nav-link" href="/shoponline/backend/loaisanpham/index.php">
                             <span data-feather="list"></span>
                             Danh sách
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/php/twig/backend/loaisanpham/create.php">
+                        <a class="nav-link" href="/shoponline/backend/loaisanpham/create.php">
                             <span data-feather="plus"></span>
                             Thêm mới
                         </a>
@@ -29,6 +29,110 @@
                 </ul>
             </li>
             <!-- End Menu Loại sản phẩm -->
+
+            <!-- Menu Nhà sản xuất -->
+            <li class="nav-item">
+                <a href="#nhasanxuatSubMenu" data-toggle="collapse" aria-expanded="false" class="nav-link dropdown-toggle">
+                    <span data-feather="package"></span> Nhà sản xuất
+                </a>
+                <ul class="collapse" id="nhasanxuatSubMenu">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/shoponline/backend/nhasanxuat/index.php">
+                            <span data-feather="list"></span>
+                            Danh sách
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/shoponline/backend/nhasanxuat/create.php">
+                            <span data-feather="plus"></span>
+                            Thêm mới
+                        </a>
+                    </li>
+                </ul>
+            </li>
+            <!-- End Menu Nhà sản xuất -->
+
+            <!-- Menu Khuyến mãi -->
+            <li class="nav-item">
+                <a href="#khuyenmaiSubMenu" data-toggle="collapse" aria-expanded="false" class="nav-link dropdown-toggle">
+                    <span data-feather="package"></span> Khuyến mãi
+                </a>
+                <ul class="collapse" id="khuyenmaiSubMenu">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/shoponline/backend/khuyenmai/index.php">
+                            <span data-feather="list"></span>
+                            Danh sách
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/shoponline/backend/khuyenmai/create.php">
+                            <span data-feather="plus"></span>
+                            Thêm mới
+                        </a>
+                    </li>
+                </ul>
+            </li>
+            <!-- End Menu Khuyến mãi -->
+
+            <!-- Menu Sản phẩm  -->
+            <li class="nav-item">
+                <a href="#sanphamSubMenu" data-toggle="collapse" aria-expanded="false" class="nav-link dropdown-toggle">
+                    <span data-feather="package"></span> Sản phẩm
+                </a>
+                <ul class="collapse" id="sanphamSubMenu">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/shoponline/backend/sanpham/index.php">
+                            <span data-feather="list"></span>
+                            Danh sách
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/shoponline/backend/sanpham/create.php">
+                            <span data-feather="plus"></span>
+                            Thêm mới
+                        </a>
+                    </li>
+                </ul>
+            </li>
+            <!-- End Menu Sản phẩm  -->
+
+            <!-- Menu Hình sản phẩm -->
+            <li class="nav-item">
+                <a href="#hinhsanphamSubMenu" data-toggle="collapse" aria-expanded="false" class="nav-link dropdown-toggle">
+                    <span data-feather="package"></span> Hình sản phẩm
+                </a>
+                <ul class="collapse" id="hinhsanphamSubMenu">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/shoponline/backend/hinhsanpham/index.php">
+                            <span data-feather="list"></span>
+                            Danh sách
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/shoponline/backend/hinhsanpham/create.php">
+                            <span data-feather="plus"></span>
+                            Thêm mới
+                        </a>
+                    </li>
+                </ul>
+            </li>
+            <!-- End Menu Hình sản phẩm -->
+
+            <!-- Menu Đơn đặt hàng  -->
+            <li class="nav-item">
+                <a href="#dondathangSubMenu" data-toggle="collapse" aria-expanded="false" class="nav-link dropdown-toggle">
+                    <span data-feather="package"></span> Đơn đặt hàng
+                </a>
+                <ul class="collapse" id="dondathangSubMenu">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/shoponline/backend/dondathang/index.php">
+                            <span data-feather="list"></span>
+                            Danh sách
+                        </a>
+                    </li>
+                </ul>
+            </li>
+            <!-- End Menu Đơn đặt hàng -->
         </ul>
     </div>
 </nav>
