--- a/templates/backend/gopy/index.html.twig
+++ b/templates/backend/gopy/index.html.twig
@@ -22,26 +22,31 @@ Danh sách chủ đề góp ý
 <table class="table table-bordered table-hover mt-2">
     <thead class="thead-dark">
         <tr>
-            <th>Mã loại góp ý</th>
-            <th>Tên loại góp ý</th>
-            
-            <th>Ghi chú</th>
+            <th>Mã góp ý</th>
+            <th>Họ tên</th>
+            <th>Email</th>
+            <th>Địa chỉ</th>
+            <th>Điện thoại</th>
+            <th>Tiêu đề</th>
+            <th>Nội dung</th>
+            <th>Ngày góp</th>
+            <th>Chủ đề góp ý</th>
         </tr>
     </thead>
     <tbody>
-        {% for chudegopy in ds_chudegopy %}
+        {% for gopy in ds_gopy %}
         <tr>
-            <td>{{ chudegopy.cdgy_ma }}</td>
-            <td>{{ chudegopy.cdgy_ten }}</td>
+            <td>{{ gopy.cdgy_ma }}</td>
+            <td>{{ gopy.cdgy_ten }}</td>
             
             <td>
                 <!-- Nút sửa, bấm vào sẽ hiển thị form hiệu chỉnh thông tin dựa vào khóa chính `cdgy_ma` -->
-                <a href="edit.php?cdgy_ma={{ chudegopy.cdgy_ma }}" class="btn btn-warning">
+                <a href="edit.php?cdgy_ma={{ gopy.cdgy_ma }}" class="btn btn-warning">
                     <span data-feather="edit"></span> Sửa
                 </a>
 
                 <!-- Nút xóa, bấm vào sẽ xóa thông tin dựa vào khóa chính `cdgy_ma` -->
-                <a href="delete.php?cdgy_ma={{ chudegopy.cdgy_ma }}" class="btn btn-danger">
+                <a href="delete.php?cdgy_ma={{ gopy.cdgy_ma }}" class="btn btn-danger">
                     <span data-feather="delete"></span> Xóa
                 </a>
             </td>
