--- a/templates/backend/hinhthucthanhtoan/index.html.twig
+++ b/templates/backend/hinhthucthanhtoan/index.html.twig
@@ -22,7 +22,7 @@ Danh sách thanh toán
 <table class="table table-bordered table-hover mt-2">
     <thead class="thead-dark">
         <tr>
-            <th>Mã loại thanh toán</th>
+            <!-- <th>Mã loại thanh toán</th> -->
             <th>Tên loại thanh toán</th>
             
             <th>Ghi chú</th>
@@ -31,7 +31,7 @@ Danh sách thanh toán
     <tbody>
         {% for hinhthucthanhtoan in ds_hinhthucthanhtoan %}
         <tr>
-            <td>{{ hinhthucthanhtoan.httt_ma }}</td>
+            <!-- <td>{{ hinhthucthanhtoan.httt_ma }}</td> -->
             <td>{{ hinhthucthanhtoan.httt_ten }}</td>
             
             <td>
