--- a/templates/backend/layouts/includes/header.html.twig
+++ b/templates/backend/layouts/includes/header.html.twig
@@ -3,7 +3,14 @@
     <input class="form-control form-control-dark w-100" type="text" placeholder="Tìm kiếm" aria-label="Search">
     <ul class="navbar-nav px-3">
         <li class="nav-item text-nowrap">
-            <a class="nav-link" href="#">Đăng xuất</a>
+            <!-- <a class="nav-link" href="#">Đăng xuất</a> -->
+            {% if session['username'] %}
+            <!-- Nếu đã đăng nhập thì hiển thị nút Đăng xuất -->
+            <a class="nav-link" href="/php/twig/backend/pages/logout.php">{{ session['username'] }} - Đăng xuất</a>
+            {% else %}
+            <!-- Nếu chưa đăng nhập thì hiển thị nút Đăng nhập -->
+            <a class="nav-link" href="/php/twig/backend/pages/login.php">Đăng nhập</a>
+            {% endif %}
         </li>
     </ul>
 </nav>
