--- a/templates/backend/khuyenmai/index.html.twig
+++ b/templates/backend/khuyenmai/index.html.twig
@@ -24,13 +24,13 @@ Danh sách khuyến mãi
         <tr>
             <th>Mã khuyến mãi</th>
             <th>Tên khuyến mãi</th>
-            <th>Nội dụng khuyến mãi</th>
+            <th>Nội dung khuyến mãi</th>
             <th>Ngày bắt đầu</th>
             <th>Ngày kết thúc</th>
         </tr>
     </thead>
     <tbody>
-        {% for khuyenmai in khuyenmai %}
+        {% for khuyenmai in ds_khuyenmai %}
         <tr>
             <td>{{ khuyenmai.km_ma }}</td>
             <td>{{ khuyenmai.km_ten }}</td>
@@ -38,13 +38,13 @@ Danh sách khuyến mãi
             <td>{{ khuyenmai.km_tungay }}</td>
             <td>{{ khuyenmai.km_denngay }}</td>
             <td>
-                <!-- Nút sửa, bấm vào sẽ hiển thị form hiệu chỉnh thông tin dựa vào khóa chính `lsp_ma` -->
-                <a href="edit.php?lsp_ma={{ khuyenmai.km_ma }}" class="btn btn-warning">
+                <!-- Nút sửa, bấm vào sẽ hiển thị form hiệu chỉnh thông tin dựa vào khóa chính `km_ma` -->
+                <a href="edit.php?km_ma={{ khuyenmai.km_ma }}" class="btn btn-warning">
                     <span data-feather="edit"></span> Sửa
                 </a>
 
-                <!-- Nút xóa, bấm vào sẽ xóa thông tin dựa vào khóa chính `lsp_ma` -->
-                <a href="delete.php?lsp_ma={{ khuyenmai.km_ma }}" class="btn btn-danger">
+                <!-- Nút xóa, bấm vào sẽ xóa thông tin dựa vào khóa chính `km_ma` -->
+                <a href="delete.php?km_ma={{ khuyenmai.km_ma }}" class="btn btn-danger">
                     <span data-feather="delete"></span> Xóa
                 </a>
             </td>
