--- a/templates/backend/layouts/includes/footer.html.twig
+++ b/templates/backend/layouts/includes/footer.html.twig
@@ -1,5 +1,5 @@
 <footer class="footer mt-auto py-3">
     <div class="container">
-        <span> Bản quyền &copy; <a href="#">Duy Tran</a> - 2019</span>
+        <span style="margin-left:50%" > Bản quyền &copy; <a href="#">Duy Tran</a> - 2019</span>
     </div>
 </footer>
