--- a/templates/frontend/sanpham/chitiet.html.twig
+++ b/templates/frontend/sanpham/chitiet.html.twig
@@ -317,20 +317,9 @@ Sản phẩm {{ sanpham.sp_ten }}
                         <h4 class="price">Giá hiện tại: <span>{{ sanpham.sp_gia_formated }}</span></h4>
                         <p class="vote"><strong>100%</strong> hàng <strong>Chất lượng</strong>, đảm bảo <strong>Uy
                                 tín</strong>!</p>
-                        <h5 class="sizes">sizes:
-                            <span class="size" data-toggle="tooltip" title="cỡ Nhỏ">s</span>
-                            <span class="size" data-toggle="tooltip" title="cỡ Trung bình">m</span>
-                            <span class="size" data-toggle="tooltip" title="cỡ Lớn">l</span>
-                            <span class="size" data-toggle="tooltip" title="cỡ Đại">xl</span>
-                        </h5>
-                        <h5 class="colors">colors:
-                            <span class="color orange not-available" data-toggle="tooltip" title="Hết hàng"></span>
-                            <span class="color green"></span>
-                            <span class="color blue"></span>
-                        </h5>
                         <div class="form-group">
                             <label for="soluong">Số lượng đặt mua:</label>
-                            <input type="number" class="form-control" id="soluong" name="soluong">
+                            <input type="number" class="form-control" id="soluong" name="soluong" min="1" max="100" value="1">
                         </div>
                         <div class="action">
                             <a class="add-to-cart btn btn-default" id="btnThemVaoGioHang">Thêm vào giỏ hàng</a>
