--- a/templates/frontend/sanpham/chitiet.html.twig
+++ b/templates/frontend/sanpham/chitiet.html.twig
@@ -307,8 +307,8 @@ Sản phẩm {{ sanpham.sp_ten }}
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star"></span>
-                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
                             </div>
                             <span class="review-no">999 reviews</span>
                         </div>
