#12: Fix cart not working

--- a/templates/frontend/pages/lienhe.html.twig
+++ b/templates/frontend/pages/lienhe.html.twig
@@ -35,7 +35,7 @@ Liên hệ
                     <label for="message">Lời nhắn của bạn</label>
                     <textarea name="message" class="form-control"></textarea>
                 </div>
-                <button class="btn btn-default" name="btnGoiLoiNhan" style="background-color:#1e745e; color:"white";>Gởi lời nhắn</button>
+                <button class="btn btn-default" name="btnGoiLoiNhan" style="background-color:#1e745e"; color:"white";>Gởi lời nhắn</button>
             </form>
         </div>
     </div>
