--- a/templates/frontend/sanpham/chitiet.html.twig
+++ b/templates/frontend/sanpham/chitiet.html.twig
@@ -255,7 +255,7 @@ Sản phẩm {{ sanpham.sp_ten }}
     <div class="card">
         <div class="container-fliud">
             <form name="frmsanphamchitiet" id="frmsanphamchitiet" method="post"
-                action="/shoponline/frontend/giohang/themvaogiohang">
+                action="/shoponline/frontend/giohang/themvaogiohang.php">
                 {% set hinhsanphamdautien = sanpham.danhsachhinhanh|first %}
                 <input type="hidden" name="sp_ma" id="sp_ma" value="{{ sanpham.sp_ma }}" />
                 <input type="hidden" name="sp_ten" id="sp_ten" value="{{ sanpham.sp_ten }}" />
@@ -358,14 +358,14 @@ Sản phẩm {{ sanpham.sp_ten }}
         console.log((dulieugoi));
 
         $.ajax({
-            url: '/shoponline/frontend/ajax/giohang-themsanpham-ajax',
+            url: '/shoponline/frontend/ajax/giohang-themsanpham-ajax.php',
             method: "POST",
             dataType: 'json',
             data: dulieugoi,
             success: function (data) {
                 console.log(data);
                 var htmlString =
-                    `Sản phẩm đã được thêm vào Giỏ hàng. <a href="/shoponline/frontend/thanhtoan/giohang">Xem Giỏ hàng</a>.`;
+                    `Sản phẩm đã được thêm vào Giỏ hàng. <a href="/shoponline/frontend/thanhtoan/giohang.php">Xem Giỏ hàng</a>.`;
                 $('#thongbao').html(htmlString);
 
                 // Hiện thông báo
