--- a/templates/frontend/thanhtoan/giohang.html.twig
+++ b/templates/frontend/thanhtoan/giohang.html.twig
@@ -95,7 +95,7 @@ Giỏ hàng
             };
 
             $.ajax({
-                url: '/shoponline/frontend/ajax/giohang-xoasanpham-ajax',
+                url: '/shoponline/frontend/ajax/giohang-xoasanpham-ajax.php',
                 method: "POST",
                 dataType: 'json',
                 data: dulieugoi,
