--- a/templates/frontend/thanhtoan/thanhtoan.html.twig
+++ b/templates/frontend/thanhtoan/thanhtoan.html.twig
@@ -22,7 +22,7 @@ Thanh toán
 {# Nội dung trong block content #}
 {% block content %}
 <div class="container mt-4">
-    <form class="needs-validation" name="frmthanhtoan" method="post" action="/shoponline/frontend/thanhtoan/thanhtoan">
+    <form class="needs-validation" name="frmthanhtoan" method="post" action="/shoponline/frontend/thanhtoan/thanhtoan.php">
         <input type="hidden" name="kh_tendangnhap" value="{{ khachhang.kh_tendangnhap }}" />
 
         <div class="py-5 text-center">
