#13: Change content home page.

--- a/templates/frontend/pages/index.html.twig
+++ b/templates/frontend/pages/index.html.twig
@@ -147,6 +147,13 @@ Bảng tin
     </div>
 </div>
 
+<section class="jumbotron text-center">
+    <div class="container">
+        <h1 class="jumbotron-heading">Xem nhiều hơn nữa?</h1>
+        <p class="lead text-muted"><a href="/shoponline/frontend/sanpham/danhsach.php" >Danh sách các sản phẩm tại Andy shop</a><p>
+    </div>
+</section>
+
 {% endblock %}
 {# End Nội dung trong block content #}
 
